完成 查詢文字/gps 查詢

--- a/datastore/index.yaml
+++ b/datastore/index.yaml
@@ -10,7 +10,7 @@ indexes:
       - name: PayCash
       - name: Memo
       - name: RoadID
-      - name: CellStaus
+      - name: CellStatus
       - name: IsNowCash
       - name: ParkingStatus
       - name: Lat
