查詢停車場

--- a/datastore/index.yaml
+++ b/datastore/index.yaml
@@ -1,6 +1,6 @@
 indexes:
-  - kind: NTPCParkings
+  - kind: NTPCParkingSpaces
     properties:
-      - name: RoadID
+      - name: ParkingStatus
       - name: Lat
-      - name: Lon
+      - name: CellStatus
